# ai-steward

./: .ai-steward.yaml  .gitignore  README.md  pyproject.toml
.acm/: audit-trail.md  destination.md  graduate_proposal.md  history.md  learning.md  orientation.md  retrospect.md
.acm/sessions/: 01KVHXE6QTBDMQF1R5SZCRP6GQ.jsonl  01KVJH7FM9TM5H6FM9DBN73J45.jsonl  01KVJT3XA2T5458PE4DWF96PHK.jsonl  01KVJV1F8Q4HK4PVHJE38HSYD3.jsonl  01KVNE77J9TA1CAYY9P7TH51BT.jsonl  01KVNE7JDQR1Z3WPKFP7FPNEPN.jsonl  01KVNEZCE34079ENDHQDDKS5Z6.jsonl  01KVPPMZEYK73XWSX21CKMDJVB.jsonl  01KVPPSS36QSFN5KZPRJ0ZQEEQ.jsonl  01KVPPTZ7R3BNCTT4GT8A1FE7F.jsonl  01KVPRMMYPW1CZG9D06MXKQM15.jsonl  01KVPRNJ2P1EXYRRPHT4X7TBZM.jsonl  01KVPRP787HGTS2M18X8K286EV.jsonl  01KVPZDWKCF5PCE26AZBK15EFS.jsonl  01KVPZN8GWMM3EKW09XXEG25BS.jsonl  01KVPZTKYYX2ZM58XFPF2KE1MT.jsonl  01KVQ001RK3KXZ758SHKWJWBH3.jsonl  01KVQ04R8HS9KRGVS3MGJ4YE07.jsonl  01KVQ0977ME1W8WE06Z1VJB5WV.jsonl  01KVQ0EJ4TS4CFAYD2P3CBQPZ4.jsonl  01KVQ0Q4E2ZTJMRYT3DME4R2KT.jsonl  01KVQFQ1D74Q7V4G6G3MH8XCQV.jsonl  01KVQFWBSCWV2G6RGYE1QKG2HV.jsonl  01KVQS8WAZSGFH42KEPJZVPBJA.jsonl  01KVQSCQMEFXV4S4NKFC440AF9.jsonl  01KVQSMB4MF0SQYTJZ7HMH7DQ4.jsonl  01KVQSNGTQW64ABN3ZHJ21X8M8.jsonl  01KVQT1JM8DYCN60090C1V0H39.jsonl  01KVQT2K3SAA3X4NAKCN4E37XE.jsonl  (+14 more)
.trail/: audit-trail.md  destination.md  history.md  learning.md  retrospect.md  vision.md
tests/: test_cli.py  test_config.py  test_escalate.py  test_graduate.py  test_harness.py  test_implement.py  test_loop.py  test_record.py  test_reflect.py  test_reorient.py  test_scan.py  test_verify.py
(+35 files in other folders)
