[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-steward"
version = "0.1.0"
description = "Autonomous software evolution engine with separated execution and reasoning layers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
    "gitpython>=3.1",
]

[project.scripts]
ai-steward = "ai_steward.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
