[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-steward"
version = "0.1.0"
description = "Autonomous software evolution engine with separated execution and reasoning layers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.27",
    "gitpython>=3.1",
    "anthropic>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.0", "pytest>=8.0"]

[project.scripts]
ai-steward = "ai_steward.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ai_steward" = ["pipeline/prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
